# predisposition

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  optimistic.rs  pessimistic.rs  uncertain.rs
src/ext/: bool.rs  mod.rs  option.rs
